# dataminds-demo

./: .gitignore  LICENSE  main.py  pyproject.toml  sample.env  test.py
docs/: README.md  how_to_run.md  strands_agent_api.md  streamlit_ui.md
src/agent/: app.py
src/agent/prompts/: system_prompt.md
src/ui/: app.py
